# allocator

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  bash_set_locale_leak.supp  configure  configure.ac
.github/workflows/: gcc.yml
include/lazy/: buffer_allocator.inl
include/lazy/memory/: buffer_allocator.h  buffer_allocator.hpp  buffer_allocator.inl  buffer_allocator.tcc  buffer_manager.h  buffer_manager.hpp  buffer_manager.inl  buffer_manager.tcc
src/: Makefile.am  buffer_allocator_container_test.cpp  buffer_allocator_test.cpp
